// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <FirstApp /> should match snapshot v1 1`] = `
Array [
  <h1
    data-testid="test-title"
  >
    Hello, I am Goku
  </h1>,
  <p>
    No subtitle
  </p>,
  <p>
    Alex
  </p>,
  <p>
    Alex
  </p>,
]
`;

exports[`Test <FirstApp /> should match snapshot v2 1`] = `
<div>
  <h1
    data-testid="test-title"
  >
    Hello, I am Goku
  </h1>
  <p>
    No subtitle
  </p>
  <p>
    Alex
  </p>
  <p>
    Alex
  </p>
</div>
`;
